# f3-server/crates/adapter_out_c2/src/actor/agent_actor.rs
@@ -1,41 +1,56 @@
+use application::domain::model::{agent_model::{AgentModel, AgentStatus}, listener_model::ListenerId};
+use application::domain::model::agent_model::AgentId;
 use rand::Rng;
-use tokio::sync::mpsc;
+use tokio::sync::mpsc::{self, UnboundedSender};
 use x25519_dalek::{PublicKey, StaticSecret, x25519};
 
-use crate::c2_message::AgentMessage;
-
-#[derive(Debug)]
-pub enum AgentStatus {
-    CheckinProcessStarted,
-    CheckinProcessCompleted,
-}
+use crate::c2_message::{AgentMessage, C2Message};
 
 pub struct AgentActor {
-    receiver: mpsc::UnboundedReceiver<AgentMessage>,
+    id: AgentId,
+    parent_listener_id: ListenerId,
     status: AgentStatus,
-    pubkey: [u8; 32],
-    secret: [u8; 32],
-    shared_secret: [u8; 32],
+    session_pubkey: [u8;32],
+    shared_secret: [u8;32],
+    sender: mpsc::UnboundedSender<C2Message>,
+    receiver: mpsc::UnboundedReceiver<AgentMessage>,
     task_queue: Vec<String>, // TODO
 }
 
+impl Into<AgentModel> for &mut AgentActor {
+    fn into(self) -> AgentModel {
+        AgentModel { 
+            id: self.id,
+            listener_id: self.parent_listener_id,
+            status: self.status.clone(),
+            session_pubkey: self.session_pubkey,
+            shared_secret: self.shared_secret,
+        }
+    }
+}
+
 impl AgentActor {
-    pub fn new(receiver: mpsc::UnboundedReceiver<AgentMessage>) -> Self {
+    pub fn new(id: AgentId, parent_listener_id: ListenerId, received_pubkey: [u8;32], sender: mpsc::UnboundedSender<C2Message>, receiver: mpsc::UnboundedReceiver<AgentMessage>) -> Self {
         let mut secret_bytes = [0_u8; 32];
         rand::rng().fill_bytes(&mut secret_bytes);
-        let secret = StaticSecret::from(secret_bytes).to_bytes();
+        let secret = StaticSecret::from(secret_bytes);
+        let session_pubkey = PublicKey::from(&secret).to_bytes();
+        let shared_secret = x25519(secret.to_bytes(), received_pubkey);
 
-        let pubkey = PublicKey::from(secret).to_bytes();
+        log::info!("Generated session_secret: {:?}", secret.to_bytes());
+        log::info!("Generated session_pubkey: {:?}", session_pubkey);
+        log::info!("Generated shared_secret: {:?}", shared_secret);
 
-
-        Self { receiver, status: AgentStatus::CheckinProcessStarted, pubkey, secret, shared_secret: [0_u8; 32], task_queue: vec![] }
-    }
-
-    pub fn set_shared_secret(&mut self, secret: [u8; 32]) {
-        let session_pubkey = PublicKey::from(&session_secret_key);
-
-        let shared_secret = x25519(session_secret_key.to_bytes(), agent_pubkey);
-        self.shared_secret = secret;
+        Self {
+            id,
+            parent_listener_id,
+            status: AgentStatus::CheckinProcessStarted, 
+            session_pubkey,
+            shared_secret,
+            sender,
+            receiver,
+            task_queue: vec![] 
+        }
     }
 
     async fn run(&mut self) {
@@ -46,27 +61,36 @@ impl AgentActor {
 
     async fn handle_message(&mut self, msg: AgentMessage) {
         match msg {
-            AgentMessage::CheckinComplete => {
-                self.status =  AgentStatus::CheckinProcessCompleted;
-                log::info!("Agent status updated to {:?}", self.status);
-            }
-            AgentMessage::QuerySecret { reply } => {
-                reply.send(Ok(self.shared_secret));
+            AgentMessage::Query { reply } => {
+                let _ = reply.send(Ok(self.into()));
             },
+            AgentMessage::CheckinComplete => {
+                log::info!("Agent status updated to {:?}", self.status);
+                self.status =  AgentStatus::CheckinProcessCompleted;
+            }
         }
     }
 }
 
 pub struct AgentHandle {
+    pub parent_listener_id: ListenerId,
+    pub model: AgentModel,
     pub sender: mpsc::UnboundedSender<AgentMessage>,
 }
 
 impl AgentHandle {
-    pub fn new(pubkey: [u8; 32]) -> Self {
+    pub fn new(parent_listener_id: ListenerId, agent_id: AgentId, received_pubkey: [u8;32], c2_manager_sender: UnboundedSender<C2Message>) -> Self {
         let (sender, receiver) = mpsc::unbounded_channel();
-        let mut actor = AgentActor::new(receiver, pubkey);
+        let mut actor = AgentActor::new(agent_id, parent_listener_id, received_pubkey, c2_manager_sender, receiver);
+        let model = AgentModel {
+            id: actor.id.clone(),
+            listener_id: parent_listener_id,
+            status: actor.status.clone(),
+            session_pubkey: actor.session_pubkey.clone(),
+            shared_secret: actor.shared_secret.clone(),
+        };
         tokio::spawn(async move { actor.run().await });
-        Self { sender }
+        Self { parent_listener_id, model, sender }
 
     }
 }
