# f3-server/crates/adapter_out_c2/src/actor/listener_actor.rs
@@ -1,14 +1,13 @@
-use std::{collections::HashMap, net::SocketAddr};
+use std::net::SocketAddr;
 
-use application::{domain::model::listener_model::{ListenerModel, ListenerProtocol}, outbound::agent::AgentId};
+use application::domain::model::listener_model::{ListenerModel, ListenerProtocol};
 use tokio::sync::mpsc;
 use uuid::Uuid;
 
-use crate::{actor::agent_actor::AgentHandle, c2_message::{AgentMessage, C2Message, ListenerMessage}, listener::{http::HttpListener, listener::ListenerPort}};
+use crate::{c2_message::{C2Message, ListenerMessage}, listener::{http::HttpListener, listener::ListenerPort}};
 
 pub struct ListenerActor {
     receiver: mpsc::UnboundedReceiver<ListenerMessage>,
-    agent_handles: HashMap<AgentId, AgentHandle>,
     listener: Box<dyn ListenerPort>,
 }
 
@@ -17,8 +16,7 @@ impl ListenerActor {
         receiver: mpsc::UnboundedReceiver<ListenerMessage>,
         listener: Box<dyn ListenerPort>,
     ) -> Self {
-        let agent_handles = HashMap::new();
-        Self { receiver, agent_handles, listener }
+        Self { receiver, listener }
     }
 
     async fn run(&mut self) {
@@ -29,30 +27,41 @@ impl ListenerActor {
 
     async fn handle_message(&mut self, msg: ListenerMessage) {
         match msg {
-            ListenerMessage::Start { listener_id: _, reply } => {
+            ListenerMessage::Start { reply } => {
                 let _ = reply.send(self.listener.start());
             },
-            ListenerMessage::Stop { listener_id: _, reply } => {
+
+            ListenerMessage::Stop { reply } => {
                 let _ = reply.send(self.listener.stop().await);
             },
-            ListenerMessage::CheckinAgent { agent_id, agent_pubkey } => {
-                let agent_handle = AgentHandle::new(agent_pubkey);
-                self.agent_handles.insert(agent_id, agent_handle);
-                log::info!("Agent checkin process started: {agent_id}");
+
+            ListenerMessage::Query { reply } => {
+                let _ = reply.send(Ok(self.listener.listener_model()));
             },
-            ListenerMessage::CompleteCheckinAgent { listener_id, agent_id } => {
-                let Some(a) = self.agent_handles.get(&agent_id) else {
-                    return;
-                };
-                let _ = a.sender.send(AgentMessage::CheckinComplete);
-            },
-            ListenerMessage::Query { listener_id: _, agent_id , reply } => {
-                let Some(a) = self.agent_handles.get(&agent_id) else {
-                    return;
-                };
-                let _ = a.sender.send(AgentMessage::QuerySecret { reply });
-            },
-            _ => {},
+            //ListenerMessage::Start { listener_id: _, reply } => {
+            //    let _ = reply.send(self.listener.start());
+            //},
+            //ListenerMessage::Stop { listener_id: _, reply } => {
+            //    let _ = reply.send(self.listener.stop().await);
+            //},
+            //ListenerMessage::CheckinAgent { agent_id, agent_pubkey } => {
+            //    let agent_handle = AgentHandle::new(agent_pubkey);
+            //    self.agent_handles.insert(agent_id, agent_handle);
+            //    log::info!("Agent checkin process started: {agent_id}");
+            //},
+            //ListenerMessage::CompleteCheckinAgent { listener_id, agent_id } => {
+            //    let Some(a) = self.agent_handles.get(&agent_id) else {
+            //        return;
+            //    };
+            //    let _ = a.sender.send(AgentMessage::CheckinComplete);
+            //},
+            //ListenerMessage::Query { listener_id: _, agent_id , reply } => {
+            //    let Some(a) = self.agent_handles.get(&agent_id) else {
+            //        return;
+            //    };
+            //    let _ = a.sender.send(AgentMessage::QuerySecret { reply });
+            //},
+            //_ => {},
         }
     }
 }
