# f3-server/crates/adapter_out_c2/src/c2_message.rs
@@ -1,67 +1,76 @@
 use std::net::SocketAddr;
 
-use application::{domain::model::listener_model::{ListenerId, ListenerModel, ListenerProtocol}, outbound::agent::AgentId};
+use application::{domain::model::{agent_model::AgentModel, listener_model::{ListenerId, ListenerModel, ListenerProtocol}}};
+use application::domain::model::agent_model::AgentId;
 use tokio::sync::oneshot;
 
 pub enum C2Message {
-    Listener(ListenerMessage),
-    Agent(AgentMessage),
-}
-
-pub enum ListenerMessage {
-    List {
+    QueryListener {
+        listener_id: ListenerId,
+        reply: oneshot::Sender<anyhow::Result<ListenerModel>>,
+    },
+    ListListener {
         reply: oneshot::Sender<anyhow::Result<Vec<ListenerModel>>>,
     },
-    Add {
+    AddListener {
         name: String,
         addr: SocketAddr,
         protocol: ListenerProtocol,
         reply: oneshot::Sender<anyhow::Result<ListenerModel>>,
     },
-    Start {
+    RemoveListener {
         listener_id: ListenerId,
+        reply: oneshot::Sender<anyhow::Result<()>>,
+    },
+    ListAgent {
+        listener_id: ListenerId,
+        reply: oneshot::Sender<anyhow::Result<Vec<AgentModel>>>,
+    },
+    QueryAgent {
+        agent_id: AgentId,
+        reply: oneshot::Sender<anyhow::Result<AgentModel>>,
+    },
+    AddAgent {
+        listener_id: ListenerId,
+        received_pubkey: [u8; 32],
+        reply: oneshot::Sender<anyhow::Result<AgentModel>>,
+    },
+    ToListener { listener_id: ListenerId, msg: ListenerMessage },
+    ToAgent { agent_id: AgentId, msg: AgentMessage },
+}
+
+pub enum ListenerMessage {
+    Start {
         reply: oneshot::Sender<anyhow::Result<()>>,
     },
     Stop {
-        listener_id: ListenerId,
-        reply: oneshot::Sender<anyhow::Result<()>>,
-    },
-    Remove {
-        listener_id: ListenerId,
         reply: oneshot::Sender<anyhow::Result<()>>,
     },
     Query {
-        listener_id: ListenerId,
-        agent_id: AgentId,
-        reply: oneshot::Sender<anyhow::Result<[u8;32]>>,
+        reply: oneshot::Sender<anyhow::Result<ListenerModel>>,
     },
-    AgentCheckinReceived {
-        listener_id: ListenerId,
-        agent_id: AgentId,
-        agent_pubkey: [u8; 32],
-    },
-    AgentCheckinCompleted {
-        listener_id: ListenerId,
-        agent_id: AgentId
-    },
-    CheckinAgent {
-        agent_id: AgentId,
-        agent_pubkey: [u8; 32],
-    },
-    CompleteCheckinAgent {
-        listener_id: ListenerId,
-        agent_id: AgentId
-    },
-    QuerySecret {
-        listener_id: ListenerId,
-        agent_id: AgentId,
-        reply: oneshot::Sender<anyhow::Result<[u8;32]>>,
-    },
+    //AgentCheckinReceived {
+    //    listener_id: ListenerId,
+    //    agent_id: AgentId,
+    //    agent_pubkey: [u8; 32],
+    //},
+    //AgentCheckinCompleted {
+    //    listener_id: ListenerId,
+    //    agent_id: AgentId
+    //},
+    //CheckinAgent {
+    //    agent_id: AgentId,
+    //    agent_pubkey: [u8; 32],
+    //},
+    //CompleteCheckinAgent {
+    //    listener_id: ListenerId,
+    //    agent_id: AgentId
+    //},
 }
 
 pub enum AgentMessage {
+    Query {
+        reply: oneshot::Sender<anyhow::Result<AgentModel>>,
+    },
     CheckinComplete,
-    QuerySecret {
-        reply: oneshot::Sender<anyhow::Result<[u8;32]>>,
-    }
 }
